[24] JEP 494: Module Import Declarations (Second Preview) (#3555)
+ update: traditional imports shadow module imports

Fixes https://github.com/eclipse-jdt/eclipse.jdt.core/issues/2903